--- a/A2+A3 (Html+Tailwind+Javascript)/index.html
+++ b/A2+A3 (Html+Tailwind+Javascript)/index.html
@@ -3,94 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - Watch Store</title>
+    <title>Fan Store</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 font-sans">
-    <header class="bg-gray-800 text-white">
-        <div class="container mx-auto flex justify-between items-center py-4 px-6">
-            <h1 class="text-2xl font-bold">Abdullah's Watch Store</h1>
-            <button id="nav-toggle" class="md:hidden text-gray-400 hover:text-white focus:outline-none">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" />
-                </svg>
-            </button>
-            <nav id="nav-menu" class="hidden md:flex space-x-6">
-                <ul class="flex flex-col md:flex-row md:space-x-6">
-                    <li><a href="index.html" class="hover:text-gray-400">Home</a></li>
-                    <li><a href="product.html" class="hover:text-gray-400">Shop</a></li>
-                    <li><a href="about.html" class="hover:text-gray-400">About</a></li>
-                    <li><a href="contact.html" class="hover:text-gray-400">Contact</a></li>
-                    <li><a href="blog.html" class="hover:text-gray-400">Blog</a></li>
-                </ul>
-            </nav>
+<body class="bg-gray-100 text-gray-800">
+
+    <!-- Navbar -->
+    <nav class="bg-blue-600 text-white p-4">
+        <div class="container mx-auto flex justify-between items-center">
+            <h1 class="text-2xl font-bold">Fan Store</h1>
+            <button class="md:hidden block text-white" onclick="toggleMenu()">☰</button>
+            <ul id="menu" class="hidden md:flex space-x-4">
+                <li><a href="index.html" class="hover:underline">Home</a></li>
+                <li><a href="about.html" class="hover:underline">About Us</a></li>
+                <li><a href="shop.html" class="hover:underline">Shop</a></li>
+                <li><a href="contact.html" class="hover:underline">Contact Us</a></li>
+                <li><a href="blog.html" class="hover:underline">Blog</a></li>
+            </ul>
         </div>
-        <script>
-            // Function to display an alert when a navigation link is clicked
-            function handleNavClick(event) {
-                event.preventDefault();
-                alert(`You clicked on ${event.target.textContent}`);
-            }
+    </nav>
 
-            // Attach event listeners to navigation links
-            document.querySelectorAll('nav a').forEach(link => {
-                link.addEventListener('click', handleNavClick);
-            });
+    <!-- Hero Section -->
+    <section class="bg-gray-200 py-20">
+        <div class="container mx-auto text-center px-4">
+            <h2 class="text-4xl font-bold mb-4">Welcome to Fan Store</h2>
+            <p class="text-lg mb-6">Your one-stop shop for all types of fans!</p>
+            <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700" onclick="showAlert()">Shop Now</a>
+        </div>
+    </section>
 
-            // Function to dynamically update the header title
-            function updateHeaderTitle(newTitle) {
-                document.querySelector('h1').textContent = newTitle;
-            }
-
-            // Example usage of updateHeaderTitle
-            updateHeaderTitle("Welcome to Abdullah's Watch Store!");
-
-            // Navbar toggle functionality
-            const navToggle = document.getElementById('nav-toggle');
-            const navMenu = document.getElementById('nav-menu');
-
-            navToggle.addEventListener('click', () => {
-                navMenu.classList.toggle('hidden');
-            });
-        </script>
-    </header>
-
-    <main class="container mx-auto mt-8 px-6">
-        <section class="text-center">
-            <h2 class="text-4xl font-bold text-gray-800">Discover Timeless Elegance</h2>
-            <p class="text-gray-600 mt-4">Explore our exclusive collection of premium watches.</p>
-            <a href="#" class="mt-6 inline-block bg-gray-800 text-white px-6 py-3 rounded hover:bg-gray-700">Shop Now</a>
-        </section>
-
-        <section class="mt-12 grid grid-cols-1 md:grid-cols-3 gap-8">
-            <div class="bg-white shadow-md rounded-lg overflow-hidden">
-                <img src="https://via.placeholder.com/300" alt="Watch 1" class="w-full">
-                <div class="p-4">
-                    <h3 class="text-lg font-bold text-gray-800">Classic Watch</h3>
-                    <p class="text-gray-600 mt-2">$199.99</p>
+    <!-- Features Section -->
+    <section class="py-16">
+        <div class="container mx-auto text-center px-4">
+            <h3 class="text-3xl font-bold mb-8">Why Choose Us?</h3>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
+                <div class="bg-white p-6 rounded shadow">
+                    <h4 class="text-xl font-bold mb-2">Wide Variety</h4>
+                    <p>Explore a wide range of fans for every need.</p>
+                </div>
+                <div class="bg-white p-6 rounded shadow">
+                    <h4 class="text-xl font-bold mb-2">Affordable Prices</h4>
+                    <p>Get the best deals on high-quality fans.</p>
+                </div>
+                <div class="bg-white p-6 rounded shadow">
+                    <h4 class="text-xl font-bold mb-2">Fast Delivery</h4>
+                    <p>Enjoy quick and reliable delivery services.</p>
                 </div>
             </div>
-            <div class="bg-white shadow-md rounded-lg overflow-hidden">
-                <img src="https://via.placeholder.com/300" alt="Watch 2" class="w-full">
-                <div class="p-4">
-                    <h3 class="text-lg font-bold text-gray-800">Luxury Watch</h3>
-                    <p class="text-gray-600 mt-2">$299.99</p>
-                </div>
-            </div>
-            <div class="bg-white shadow-md rounded-lg overflow-hidden">
-                <img src="https://via.placeholder.com/300" alt="Watch 3" class="w-full">
-                <div class="p-4">
-                    <h3 class="text-lg font-bold text-gray-800">Sport Watch</h3>
-                    <p class="text-gray-600 mt-2">$149.99</p>
-                </div>
-            </div>
-        </section>
-    </main>
+        </div>
+    </section>
 
-    <footer class="bg-gray-800 text-white mt-12">
-        <div class="container mx-auto py-6 px-6 text-center">
-            <p>&copy; 2023 Abdullah's Watch Store. All rights reserved.</p>
+    <!-- Footer -->
+    <footer class="bg-blue-600 text-white py-4">
+        <div class="container mx-auto text-center px-4">
+            <p>&copy; 2023 Fan Store. All rights reserved.</p>
+            <button class="bg-white text-blue-600 px-4 py-2 rounded hover:bg-gray-200" onclick="displayCurrentYear()">Show Current Year</button>
         </div>
     </footer>
+
+    <script>
+        function showAlert() {
+            alert("Welcome to Fan Store! Start shopping now.");
+        }
+
+        function displayCurrentYear() {
+            const year = new Date().getFullYear();
+            alert("The current year is " + year);
+        }
+
+        function toggleMenu() {
+            const menu = document.getElementById('menu');
+            menu.classList.toggle('hidden');
+        }
+    </script>
+
 </body>
 </html>
